[WEB-6301] fix: correct directional shadow CSS variables to prevent bleed #5886

--- a/packages/tailwind-config/variables.css
+++ b/packages/tailwind-config/variables.css
@@ -714,8 +714,8 @@
   --shadow-raised-300: 0px 2px 4px -1px #292f3d0a, 0px 4px 6px -1px #292f3d0d;
   --shadow-overlay-100: 0px 10px 10px -5px #292f3d0a, 0px 10px 40px -5px #292f3d0a;
   --shadow-overlay-200: 0px 10px 10px -10px #292f3d0a, 0px 30px 60px -12px #292f3d1a;
-  --shadow-direction-left: -10px 0px 30px -5px #292f3d05, -5px 0px 80px -5px #292f3d0a;
-  --shadow-direction-right: 10px 0px 30px -5px #0000000a, 5px 0px 80px -5px #0000000a;
+  --shadow-direction-left: -25px 0px 30px -5px #292f3d05, -75px 0px 80px -5px #292f3d0a;
+  --shadow-direction-right: 25px 0px 30px -5px #0000000a, 75px 0px 80px -5px #0000000a;
   /* --------- Height --------- */
   --height-header: 3.25rem;
   /* --------- Padding --------- */
